# PROGETTO2023

./: LICENSE  MeshUtilities.cpp  README.md  uml.txt  uml_empty.txt
Esercitazioni/Es1_RateOfReturn/: main.cpp
Esercitazioni/Es2_Encryption/: main.cpp  text.txt
Esercitazioni/Es3_LinearSystem/: main.cpp
Esercitazioni/Es4_PolygonalMesh/: main.cpp
Esercitazioni/Es5_Shapes/src/: shape.cpp  shape.hpp
Esercitazioni/Es6_HeapSort/: main.cpp
Esercitazioni/Es6_HeapSort/src/: sorting.hpp
Esercitazioni/es1_2/: CMakeLists.txt  main.cpp
Esercitazioni/es2_2/: CMakeLists.txt  main.cpp
Esercitazioni/es3_2/: CMakeLists.txt  main.cpp
Esercitazioni/es4_1/: CMakeLists.txt  main.cpp
Esercitazioni/es4_2/: CMakeLists.txt  main.cpp  main2.cpp
Esercitazioni/es5_1/: CMakeLists.txt  main.cpp
Esercitazioni/es5_1/cartella_src/: CMakeLists.txt  car.cpp  car.hpp
Esercitazioni/es5_2/src/: shape.hpp
Esercitazioni/es6_1/: CMakeLists.txt
Esercitazioni/es6_1/src/: CMakeLists.txt
Esercitazioni/es6_2/: CMakeLists.txt
Esercitazioni/es6_2/src/: CMakeLists.txt  sorting.hpp
Esercitazioni/es8_1/: CMakeLists.txt  main.cpp
Esercitazioni/es8_1/src/: CMakeLists.txt  convexHull.cpp  convexHull.hpp  test_convexHull.hpp
Esercitazioni/es9_1/: CMakeLists.txt
Esercitazioni/es9_1/src/: CMakeLists.txt  quadrature.cpp  test_quadrature.hpp
Raffinamento/: .gitignore  prova.txt
Raffinamento/Armadio/: Presentazione.pptx  Scheletro_Progetto.txt
Raffinamento/Armadio/Scheletro/: uml_full.txt
Raffinamento/Project/: main_program.cpp  main_test.cpp
Raffinamento/Project/src/: CMakeLists.txt  mesh_classes.cpp  mesh_classes.hpp  sorting.hpp
Raffinamento/Project/test/: test_raffinamento.hpp
es PCS/es_2 num1/: main.cpp
es PCS/es_2 num2/: main.cpp
es PCS/es_2 num3/: main.cpp
es PCS/es_2 num4/: main.cpp
es PCS/es_2 num5/src/: shape.cpp  shape.hpp  test_shape.hpp
esercitazioni_pcs/Exercise_4/: main.cpp
esercitazioni_pcs/Exercise_5/: CMakeLists.txt  CMakeLists.txt.user.35a6bf1
spunto/: MeshUtilities.hpp  Raffinamento.hpp
(+101 files in other folders)
